--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,16 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: MyWebsite
+#Your awesome title
+email: tllwtg@gamil.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+#This is tLLWtG's first website, starting from Aug 24,2022.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://tllwtg.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: tLLWtG1
+github_username:  tLLWtG
 
 # Build settings
 markdown: kramdown
