--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,7 +27,7 @@ github_username:  tLLWtG
 markdown: kramdown
 theme: minima
 plugins:
-  - jekyll-feed
+#  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
