--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,6 +14,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: MyWebsite
+name: MyWebsite
+author: tLLWtG
 #Your awesome title
 email: tllwtg@gamil.com
 description: >- # this means to ignore newlines until "baseurl:"
@@ -27,8 +29,7 @@ github_username:  tLLWtG
 markdown: kramdown
 theme: minima
 plugins:
-
-#  - jekyll-feed
+  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
