--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ exclude:
   ]
 anchorjs: false # if you want to customize anchor. check out line:181 of `post.html`
 # If you have timezone issue (e.g. #68) in China, uncomment to use this:
-#timezone: CN
+timezone: CN
 
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
