--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 title: tLLWtG Blog
-SEOTitle: tLLWtG Blog | tLLWtG的博客
+SEOTitle: tLLWtG Blog | tLLWtG 的博客
 # bg changed to random
 header-img: img/home-bg.jpg
 email: tllwtg@gmail.com
 description: "这里是 tLLWtG 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
-keyword: "tLLWtG, tLLWtG的博客, tLLWtG Blog, 博客, 个人网站, 互联网, Web"
+keyword: "tLLWtG, tLLWtG 的博客, tLLWtG Blog, 博客, 个人网站, 互联网, Web"
 url: "https://tllwtg.github.io" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
@@ -92,11 +92,14 @@ page-mathjax: false
 # Friends
 friends:
   [
-     { title: "tLLWtG Blog, but with Hexo", href: "https://tllwtg.github.io/Hexo_Blog" },
-     { title: "OI Wiki", href: "https://oi.wiki" },
-     { title: "Codeforces", href: "https://codeforces.com" },
-     { title: "洛谷", href: "https://www.luogu.com.cn" },
-     { title: "一言", href: "https://hitokoto.cn" }
+    {
+      title: "tLLWtG Blog, but with Hexo",
+      href: "https://tllwtg.github.io/Hexo_Blog",
+    },
+    { title: "OI Wiki", href: "https://oi.wiki" },
+    { title: "Codeforces", href: "https://codeforces.com" },
+    { title: "洛谷", href: "https://www.luogu.com.cn" },
+    { title: "一言", href: "https://hitokoto.cn" },
   ]
 
 # added sitemap
