--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: tLLWtG/action-build-deploy-ghpages@v3.1.0
+      - uses: tLLWtG/action-build-deploy-ghpages@main
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
