--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: tLLWtG/action-build-deploy-ghpages@main
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }} # The GitHub installation token. Note: You can also use ${{ github.token }}
@@ -18,8 +18,8 @@ jobs:
           gh_pages_commit_message: 'Deploy commit $GITHUB_SHA\n\nAutodeployed using $GITHUB_ACTION in $GITHUB_WORKFLOW' # The commit message to use when deploying the site
           jekyll_build_opts: "" # Options to pass to the Jekyll build command.
           #(bug?)remote_repo: "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" # The repository to deploy the site to
-          committer_username: "$GITHUB_ACTOR" # The username to use for the committer of the commit
-          committer_email: "${GITHUB_ACTOR}@users.noreply.github.com" # The email to use for the committer of the commit
+          #(bug?)committer_username: "$GITHUB_ACTOR" # The username to use for the committer of the commit
+          #(bug?)committer_email: "${GITHUB_ACTOR}@users.noreply.github.com" # The email to use for the committer of the commit
           git_force: "true" # Whether to use the --force flag when pushing the commit
           override_gh_pages_branch: "false" # Whether to override the gh-pages branch on push
           gh_pages_add_no_jekyll: "true" # Whether to add the .nojekyll file to the deployed site
