--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ header-img: img/home-bg.jpg
 email: tllwtg@gmail.com
 description: "这里是 tLLWtG 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
 keyword: "tLLWtG, tLLWtG 的博客, tLLWtG Blog, 博客, 个人网站, 互联网, Web"
-url: "https://tllwtg.github.io" # your host, for absolute URL
+url: "https://tllwtg.top" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
@@ -94,7 +94,7 @@ friends:
   [
     {
       title: "tLLWtG Blog, but with Hexo",
-      href: "https://tllwtg.github.io/Hexo_Blog",
+      href: "https://tllwtg.top/Hexo_Blog",
     },
     { title: "OI Wiki", href: "https://oi.wiki" },
     { title: "Codeforces", href: "https://codeforces.com" },
