--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 future: true
 
 # SNS settings
-RSS: false
+RSS: true
 weibo_username: tLLWtG
 zhihu_username: tllwtg
 github_username: tLLWtG
