fix bug(jekyll issues 9258)

--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ exclude:
     "package.json",
     "README.md",
     "README.zh.md",
+    "vendor",
   ]
 anchorjs: false # if you want to customize anchor. check out line:181 of `post.html`
 # If you have timezone issue (e.g. #68) in China, uncomment to use this:
