--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ sidebar-about-description: "要做一个有 swag 的程序员 <br>"
 sidebar-avatar: https://avatars.githubusercontent.com/u/63890132 # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
-featured-tags: true # whether or not using Feature-Tags
+featured-tags: false # whether or not using Feature-Tags
 featured-condition-size: 1 # A tag will be featured if the size of it is more than this condition value
 
 # Progressive Web Apps
