add notices according to License

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,9 @@
 # Site settings
+
+# update config
+#
+# Modified by tLLWtG
+
 title: tLLWtG Blog
 SEOTitle: tLLWtG Blog | tLLWtG 的博客
 # bg changed to random
